Добавлено время жизни кода активации